# Axiomind

./: .eslintignore  .eslintrc.json  .gitignore  CLAUDE.md  Cargo.toml  README.md  crates.js  help.html  index.html  package-lock.json  package.json  playwright.config.js  settings.html  src-files.js  test_api.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
axiomind/: all.html  fn.main.html  index.html
axiomind_ai/: all.html  fn.create_ai.html  index.html  trait.AIOpponent.html
axiomind_cli/: all.html  enum.CliError.html  enum.Vs.html  fn.run.html  index.html  sidebar-items.js  struct.BatchValidationError.html
axiomind_engine/: all.html  index.html
axiomind_web/: all.html  index.html  sidebar-items.js  struct.BaselineAI.html  trait.AIOpponent.html
axiomind_web_server/: all.html  fn.main.html  fn.print_help.html  index.html
axm/: all.html  fn.main.html  index.html
axm_ai/: all.html  fn.create_ai.html  index.html  sidebar-items.js  trait.AIOpponent.html
axm_cli/: all.html  enum.CliError.html  fn.run.html  index.html  sidebar-items.js
axm_engine/: all.html  index.html  sidebar-items.js
axm_web/: all.html  index.html  sidebar-items.js  struct.BaselineAI.html  trait.AIOpponent.html
axm_web_server/: all.html  (+3 more)
rust/cli/: Cargo.toml
rust/cli/src/: cli.rs  config.rs  error.rs  exit_code.rs  formatters.rs  io_utils.rs  lib.rs  macros.rs  main.rs  ui.rs  validation.rs
rust/cli/src/commands/: bench.rs  cfg.rs  dataset.rs  deal.rs  doctor.rs  eval.rs  export.rs  mod.rs  play.rs  replay.rs  rng.rs  sim.rs  stats.rs  verify.rs
rust/cli/tests/: README.md  integration.rs  test_behavioral.rs  test_cli_commands.rs  test_command_enum_sync.rs  test_command_registry.rs  test_dataset.rs  test_deal_rng.rs  test_doctest_validation.rs  test_eval.rs  test_exit_codes.rs  test_export.rs  test_performance_metrics.rs  test_play.rs  test_play_session.rs  test_replay.rs  test_rustdoc_validation.rs  test_session_progression.rs  test_sim.rs  test_sim_resume.rs  test_stats.rs  test_tools.rs  test_ui.rs  test_validation.rs  test_warning_system.rs  test_workflows.rs
rust/cli/tests/helpers/: assertions.rs  cli_runner.rs  mod.rs  temp_files.rs
rust/cli/tests/integration/: cli_basic.rs  config_precedence.rs  evaluation_basic.rs  file_io_basic.rs  game_logic.rs
rust/engine/: Cargo.toml
rust/engine/src/: cards.rs  deck.rs  engine.rs  errors.rs  game.rs  hand.rs  lib.rs  logger.rs  player.rs  rules.rs  test_broken_link.rs  test_failing_doctest.rs
rust/engine/tests/: test_betting_validation.rs  test_burn_positions.rs  test_core_documentation.rs  test_deck_shuffling.rs  test_eval_perf.rs  test_game_flow.rs  test_game_setup.rs  test_hand_eval_optimized.rs  test_hand_evaluation.rs  test_hand_logging.rs  test_hand_metadata.rs  test_hand_record.rs  test_player_and_state.rs  test_pot_management.rs  test_showdown_info.rs  test_zero_stack_end.rs
rust/web/: API.md  Cargo.toml  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
rust/web/src/: ai.rs  errors.rs  events.rs  history.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  server.rs  session.rs  settings.rs  static_handler.rs
rust/web/src/ai/: baseline.rs
rust/web/src/handlers/: game.rs  health.rs  history.rs  mod.rs  settings.rs  sse.rs
rust/web/static/: index.html
rust/web/static/css/: app.css
rust/web/static/js/: game.js  game.test.js  htmx.min.js
rust/web/tests/: comprehensive_e2e.rs  concurrent_sessions.rs  data_models.rs  documentation_test.rs  engine_integration.rs  error_handling.rs  frontend_controls.rs  game_api.rs  game_state_visualization.rs  history_performance.rs  load_testing.rs  scaffold.rs  settings_integration_test.rs  sse_performance.rs  visual_e2e_test.rs
(+2319 files in other folders)
