[package]
name = "axm_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "axm_cli"
path = "src/lib.rs"

[[bin]]
name = "axm"
path = "src/main.rs"

[dependencies]


clap = { version =  '4.5', features = ['derive'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axm-engine = { path = "../engine" }
rand = "0.8"
rand_chacha = "0.3"
zstd = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
once_cell = "1"
serial_test = "3.2"
