[package]
name = "axiomind_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "axiomind_cli"
path = "src/lib.rs"

[[bin]]
name = "axiomind"
path = "src/main.rs"

[dependencies]


clap = { version =  '4.5', features = ['derive'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
axiomind-engine = { path = "../engine" }
axiomind-ai = { path = "../ai" }
rand = "0.9.2"
rand_chacha = "0.9.0"
zstd = "0.13"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
once_cell = "1"
serial_test = "3.2"
tempfile = "3"
