[package]
name = "axiomind-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "axiomind_engine"
path = "src/lib.rs"

[dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

chrono = { version =  '0.4', default-features = false, features = [ 'clock','std'] } 


