[package]
name = "axm_web"
version = "0.1.0"
edition = "2021"

[lib]
name = "axm_web"
path = "src/lib.rs"

[dependencies]
warp = { version = "0.3", default-features = false, features = ["tls"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
axm-engine = { path = "../engine" }
mime_guess = "2"
tokio-stream = "0.1"
hyper = "1.7.0"
