[package]
name = "axiomind_web"
version = "0.1.0"
edition = "2024"

[lib]
name = "axiomind_web"
path = "src/lib.rs"

[[bin]]
name = "axiomind-web-server"
path = "src/bin/server.rs"

[dependencies]
warp = { version = "0.3", default-features = false, features = ["tls"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
axiomind-engine = { path = "../engine" }
axiomind-ai = { path = "../ai" }
mime_guess = "2"
tokio-stream = "0.1"
hyper = "1.7.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
